<resources>
    <string name="app_name">TodoApp</string>

    <string name="action_settings">Settings</string>
    <string name="app_title_label">Todo App</string>
    <string name="todo_input_hint">specify your todo</string>
    <string name="todo_app_btn">Add</string>
    <string name="title_activity_edit_item">Edit Item</string>

    <string name="hello_world">Hello world!</string>
    <string name="edit_item_label">Todo Name:</string>
    <string name="edit_item_text_label">enter new todo value</string>
    <string name="edit_text_button">Save</string>
    <string name="edit_priority_label">Priority:</string>
    <string name="edit_date_label">Due Date:</string>
    <string name="edit_date_input_hint">enter due date</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
